--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset = "utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Presentation </title>
+    </head>
+    <body>
+        <h1> Bruno Presti </h1>
+        <p><em> "Sometimes later becomes never. Do it now" </em></p>
+        <img src="Photo de profil.jpg" alt = "Photo de profil" height="350" width="280">
+        <h3> "Me, in one sentence" </h3>
+        <table>
+            <tr>
+                <td> Birthday ?</td>
+                <td> Favorite color ? </td>
+                <td> Favorite food ? </td>
+                <td> Pineapple on pizza ?</td>
+            </tr>
+            <tr>
+                <td> 08/04 🎂 </td>
+                <td> Red 🔴 </td>
+                <td> Pizza 🍕 </td>
+                <td> ❌ NO, please 🙏 </td>
+            </tr>
+        </table>
+        <h2> Hobbies </h2>
+        <ol>
+            <li> Make pizza </li>
+            <ul>
+                <li> Wood-fired pizza </li>
+                <li> Home oven pizza </li>
+            </ul>
+            <li> Playing video games </li>
+            <li> Watching football </li>
+        </ol>
+        <h2> You can always count on me when... </h2>
+        <ol>
+            <li> You don't feel good morally </li>
+            <li> You are discouraged </li>
+            <li> You just need help </li>
+        </ol>
+        <h2> A funny story </h2>
+        <p> When I was a teenager, it was winter and we were at Kinepolis with the school. The water in the "fountain" in front of the cinema was frozen. I put my foot on it for a laugh and the ice broke and my leg got soaked </p>
+        <q> <em> Can we say that the sprinkler has been watered? </em> 👀 </q>
+    <nav>
+        <a href="https://github.com/BathshebaDeepijan/markdown-warmup-html">Previous </a> </br>
+        <a href="https://github.com/PrestiB/markdown-challenge ">BRUNO PRESTI </a> </br>
+        <a href="(https://mrsociety404.github.io/markdown-to-html/ ">Next </a> </br>
+    </nav>
+    </body>
+</html>
