--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
         <title> Presentation </title>
     </head>
     <body>
+        <div>
         <h1> Bruno Presti </h1>
         <p><em> "Sometimes later becomes never. Do it now" </em></p>
         <img src="Photo de profil.jpg" alt = "Photo de profil" height="350" width="280">
         <h3> "Me, in one sentence" </h3>
         <table>
             <tr>
-                <td> Birthday ?</td>
-                <td> Favorite color ? </td>
-                <td> Favorite food ? </td>
-                <td> Pineapple on pizza ?</td>
+                <th> Birthday ?</th>
+                <th> Favorite color ? </th>
+                <th> Favorite food ? </th>
+                <th> Pineapple on pizza ?</th>
             </tr>
             <tr>
                 <td> 08/04 🎂 </td>
@@ -43,12 +44,14 @@
             <li> You just need help </li>
         </ol>
         <h2> A funny story </h2>
-        <p> When I was a teenager, it was winter and we were at Kinepolis with the school. The water in the "fountain" in front of the cinema was frozen. I put my foot on it for a laugh and the ice broke and my leg got soaked </p>
+        <p> When I was a teenager, it was winter and we were at Kinepolis with the school. </br>
+            water in the "fountain" in front of the cinema was frozen. I put my foot on it for a laugh and the ice broke and my leg got soaked </p>
         <q> <em> Can we say that the sprinkler has been watered? </em> 👀 </q>
         <nav>
-        <a href="https://github.com/BathshebaDeepijan/markdown-warmup-html">Previous </a> </br>
-        <a href="https://github.com/PrestiB/markdown-challenge ">BRUNO PRESTI </a> </br>
-        <a href="(https://mrsociety404.github.io/markdown-to-html/ ">Next </a> </br>
+        <a class ="button" href="https://github.com/BathshebaDeepijan/markdown-warmup-html">Previous </a> </br>
+        <a class ="button" href="https://github.com/PrestiB/markdown-challenge ">BRUNO PRESTI </a> </br>
+        <a class ="button" href="(https://mrsociety404.github.io/markdown-to-html/ ">Next </a> </br>
         </nav>
+        </div>
     </body>
 </html>
