End of the repo

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             water in the "fountain" in front of the cinema was frozen. I put my foot on it for a laugh and the ice broke and my leg got soaked </p>
         <q> <em> Can we say that the sprinkler has been watered? </em> 👀 </q>
         <nav>
-        <a class ="button" href="https://github.com/BathshebaDeepijan/markdown-warmup-html">Previous </a> </br>
-        <a class ="button" href="https://github.com/PrestiB/markdown-challenge ">BRUNO PRESTI </a> </br>
-        <a class ="button" href="(https://mrsociety404.github.io/markdown-to-html/ ">Next </a> </br>
+        <a class ="button" href="https://github.com/BathshebaDeepijan/markdown-challenge">Previous </a> </br>
+        <a class ="button" href="https://prestib.github.io/markdown-challenge/index.html">BRUNO PRESTI </a> </br>
+        <a class ="button" href="https://mrsociety404.github.io/markdown-to-html/">Next </a> </br>
         </nav>
         </div>
     </body>
